Xây dựng luồng nhận chỉ số đo xa, xác nhận chỉ số, tính hóa đơn luồng bình thường refactor hệ thống